--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,69 @@
-.Weather {
-    border: 1px solid palevioletred;
+.Weather form {
+  border-bottom: 1px solid #f9f7fe;
+  padding: 0 0 30px 0;
+}
+
+.Weather .form-control {
+  background-color: #fcf7fe;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  padding: 15px 20px;
+  margin-right: 0;
+}
+
+.Weather .btn-control {
+  background-color: #885df1;
+  padding: 15px 30px;
+  border: none;
+  font-size: 16px;
+  border-radius: 8px;
+  color: white;
+}
+
+.Weather main {
+  padding: 30px 0;
+}
+
+.Weather h1 {
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
+  font-weight: bold;
+}
+
+.Weather ul {
+  padding: 0;
+}
+
+.Weather li {
+  font-size: 16px;
+  line-height: 24px;
+  color: #994bc0d9;
+  font-weight: 400;
+  list-style-type: none;
+}
+
+.Weather img {
+    margin-right: 5px;
+}
+
+.Weather .temperature {
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 64px;
+}
+
+.Weather strong,
+.temperature,
+.unit {
+  color: #9223ac;
+}
+
+.Weather .unit {
+    position: relative;
+    font-size: 18px;
+    line-height: 1;
+    top: -33px;
+    font-weight: 500;
 }
