--- a/src/Weather.css
+++ b/src/Weather.css
@@ -16,7 +16,24 @@
   background-color: #885df1;
   padding: 15px 30px;
   border: none;
-  font-size: 16px;
   border-radius: 8px;
   color: white;
+  text-align: center;
+  max-width: 100%;
 }
+
+@media (max-width: 550px) {
+  .Weather h1 {
+    font-size: 25px;
+  }
+
+  .Weather .form-control {
+    font-size: 13px;
+  }
+
+  .Weather .btn-control {
+    font-size: 13px;
+    padding: 15px 10px;
+  }
+}
+
